# Investing-Bot

./: Deep Research Report - Profit Maximization - Tracked Changes (Claude).docx  README.md  pyproject.toml
config/: trading_profile.json
examples/: sample_candidates.json
src/investing_bot/: __init__.py  ablation.py  alerts.py  allocator.py  alpha_registry.py  archive.py  attribution.py  baselines.py  bucket_health.py  calibration.py  campaign_manager.py  capabilities.py  capital_efficiency.py  champion_challenger.py  chaos_harness.py  corp_actions.py  daily_rollup.py  deployment_control.py  event_context.py  evidence_pool.py  execution_audit.py  execution_learning.py  (+36 more)
tests/: test_ablation.py  test_allocator.py  test_alpha_families.py  test_alpha_registry.py  test_archive.py  test_attribution.py  test_baselines.py  test_bucket_health.py  test_calibration.py  test_campaign_manager.py  test_capabilities.py  test_capital_efficiency.py  test_champion_challenger.py  test_corp_actions.py  test_daily_rollup.py  test_deployment_control.py  test_event_context.py  test_evidence_pool.py  test_execution_audit.py  test_execution_learning.py  test_execution_style.py  test_exit_policy.py  test_experiment_registry.py  test_fault_injection_chaos.py  test_feature_store.py  test_ghost_broker.py  test_instrument_registry.py  test_latency.py  test_ledger.py  test_off_policy_eval.py  test_online_policy.py  test_order_spec_verifier.py  test_pipeline.py  test_policy.py  test_portfolio_state.py  test_preflight.py  test_promotion.py  test_reconciliation.py  test_recovery.py  test_regime.py  (+11 more)
(+4 files in other folders)
